--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "homepage": "https://github.com/atwb21786/express-boilerplate#readme",
   "dependencies": {
+    "-": "0.0.1",
+    "D": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.0.0",
+    "postgrator-cli": "^3.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
