--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
     "pg": "^8.0.0",
-    "postgrator-cli": "^3.2.0"
+    "postgrator-cli": "^3.2.0",
+    "valid-url": "^1.0.9",
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
